--- a/src/components/Campaign/Campaign.css
+++ b/src/components/Campaign/Campaign.css
@@ -32,7 +32,6 @@
     width: 475px;
     max-height: 275px;
     display: grid;
-    grid-template-rows: 20px 50px 1fr 50px;
     border-radius: 10px;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
     transition: all 0.2s;
@@ -43,33 +42,12 @@
     transform: scale(1.01);
   }
   
-  .card__link,
-  .card__exit,
   .card__icon {
     position: relative;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.9);
   }
   
-  .card__link::after {
-    position: absolute;
-    top: 25px;
-    left: 0;
-    content: "";
-    width: 0%;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.6);
-    transition: all 0.5s;
-  }
-  
-  .card__link:hover::after {
-    width: 100%;
-  }
-  
-  .card__exit {
-    grid-row: 1/2;
-    justify-self: end;
-  }
   
   .card__icon {
     grid-row: 2/3;
@@ -80,9 +58,10 @@
     grid-row: 3/4;
     font-weight: 400;
     color: #ffffff;
+    text-decoration: underline;
   }
   
-  .card__apply {
+  .card__text {
     grid-row: 4/5;
     align-self: center;
   }
@@ -94,19 +73,22 @@
   }
   
   .card-2 {
-    background: radial-gradient(#fbc1cc, #fa99b2);
+    background: radial-gradient(#fbc1cc, #fa9999);
   }
   
   .card-3 {
-    background: radial-gradient(#76b2fe, #b69efe);
+    background: radial-gradient(#18a3ac, #5dbfc5);
   }
   
   .card-4 {
-    background: radial-gradient(#60efbc, #58d5c9);
+    background: radial-gradient(#60ef86, #3dc53f);
   }
   
   .card-5 {
     background: radial-gradient(#f588d8, #c0a3e5);
+  }
+  .card-6 {
+    background: radial-gradient(#e7b14c, #fccc6c);
   }
   
   /* RESPONSIVE */
