--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,64 +1,126 @@
 .footer-container {
-	background: var(--secondary-bg);
-	padding: var(--spacing-6) var(--spacing-1);
-	width: 100%;
-	
-	.col {
-		border-bottom: 1px solid var(--bg-2);
-	}
+  background: var(--secondary-bg);
+  padding: var(--spacing-6) var(--spacing-1);
+  width: 100%;
+  margin-top: 60px;
+  border-top: 1px solid black ;
 
-	.brand-container {
-		display: flex;
-		align-items: center;
-		justify-content: space-evenly;
-		.brand-logo {
-			width: 300px;
-			text-align: left;
-		}
-	}
-	.brand-name {
-		font-size: 1.5rem;
-		font-weight: 500;
-	}
-	@media screen and (max-width: 760px) {
-		.brand-name{
-			text-align: center;
-		}
-	}
-	.contact-row {
-		margin-top: var(--spacing-4);
-		text-align: left;
+  .social-block {
+    width: 80%;
+    position: relative;
+    border-radius: 30px;
+    border: 1px solid black;
+    top: -80px;
+    background-color: var(--secondary-bg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
 
-		.contact {
-			display: flex;
-			justify-items: center;
-			margin-bottom: 15px;
-			align-items: center;
-		}
+    h4{
+      display: inline;
+    }
+    ul{
+      display: flex;
+      justify-content: space-evenly;
+    }
 
-		.contact-heading {
-			font-size: 1.4rem;
-			font-size: bold;
-		}
-		p {
-			margin-top: var(--spacing-2);
-		}
-		.icon {
-			font-size: var(--fs-l);
-			color: var(--neutral);
-			padding: var(--spacing-1) var(--spacing-2);
-			background: var(--bg-2);
-			border-radius: 8px;
-			height: max-content;
-		}
-		.label {
-			margin-left: var(--spacing-4);
-			font-size: 1rem;
-		}
-	}
-	.copyright {
-		padding-top: var(--spacing-2);
-		margin-bottom: 0;
-		text-align: center;
-	}
+    ul li .fab {
+      font-size: 2rem;
+      transition: 0.3s;
+      color: #000;
+      line-height: 3rem;
+    }
+
+    ul li .fab:hover {
+      color: #fff;
+    }
+    ul li{
+      margin: 5px;
+    }
+
+    ul li a {
+      position: relative;
+      display: block;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+      background-color: #fff;
+      text-align: center;
+      transition: 0.6s;
+      box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    ul li a:hover {
+      transform: translate(0, -10%);
+    }
+
+    ul li:nth-child(1) a:hover {
+      background-color: #3b5998;
+    }
+    ul li:nth-child(2) a:hover {
+      background-color: #e4405f;
+    }
+    ul li:nth-child(3) a:hover {
+      background-color: #0077b5;
+    }
+  }
+  .col {
+    border-bottom: 1px solid var(--bg-2);
+  }
+
+  .brand-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    .brand-logo {
+      width: 300px;
+      text-align: left;
+    }
+  }
+  .brand-name {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  @media screen and (max-width: 760px) {
+    .brand-name {
+      text-align: center;
+    }
+  }
+  .contact-row {
+    margin-top: var(--spacing-4);
+    text-align: left;
+
+    .contact {
+      display: flex;
+      justify-items: center;
+      margin-bottom: 15px;
+      align-items: center;
+    }
+
+    .contact-heading {
+      font-size: 1.4rem;
+      font-size: bold;
+    }
+    p {
+      margin-top: var(--spacing-2);
+    }
+    .icon {
+      font-size: var(--fs-l);
+      color: var(--neutral);
+      padding: var(--spacing-1) var(--spacing-2);
+      background: var(--bg-2);
+      border-radius: 8px;
+      height: max-content;
+    }
+    .label {
+      margin-left: var(--spacing-4);
+      font-size: 1rem;
+    }
+  }
+  .copyright {
+    padding-top: var(--spacing-2);
+    margin-bottom: 0;
+    text-align: center;
+  }
 }
